<resources>
    <string name="app_name">AulasJava</string>
    <string name="test">Test String</string>
    <string name="counter">OK</string>
    <string name="clicks">Clicks:</string>

    <plurals name="clicks">
        <item quantity="one">%d click</item>
        <item quantity="other">%d clicks</item>
    </plurals>

    <string name="next_activity">Next Activity</string>
    <string name="needs_clicks">clicks are needed to continue!</string>
    <string name="title">Total clicks</string>
    <string name="show_notification">Show notification</string>
    <string name="changeColorBlue">Change Color to Blue?</string>
    <string name="changeColorRed">Change color to Red?</string>
    <string name="dialog">Change color</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="grey">Grey</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="background">Background</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset counter</string>
    <string name="keyboard">Keyboard</string>
    <string name="enter">Enter</string>
    <string name="brand">Brand</string>
    <string name="owner">Owner</string>
    <string name="model">Model</string>
    <string name="add_car">Add car</string>
    <string name="noOwner">No Owner</string>
    <string name="makeCall">Make Call</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="skipIntro">Skip intro</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>

    <string-array name="background_list">
        <item>Grey</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="painter">Open painter</string>
</resources>
