<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/button1"
        android:layout_margin="10dp"
        android:text="@string/counter"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:id="@+id/counter_text"
        tools:text="test"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/next_act"
        android:layout_below="@+id/counter_text"
        android:layout_margin="10dp"
        android:text="@string/next_activity"
        android:background="@color/blue"
        android:textColor="@color/white"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/reset"
        android:layout_below="@+id/next_act"
        android:layout_margin="10dp"
        android:text="@string/reset"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_car"
        android:layout_below="@+id/reset"
        android:layout_margin="10dp"
        android:text="@string/add_car"
        android:background="@color/blue"
        android:textColor="@color/white"/>

</RelativeLayout>