<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    tools:context=".Main2Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/counter_text"
        tools:text="test"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/show_notification"
        android:layout_below="@+id/counter_text"
        android:layout_margin="10dp"
        android:text="@string/show_notification"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/dialog"
        android:layout_below="@+id/show_notification"
        android:layout_margin="10dp"
        android:text="@string/dialog"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/settings"
        android:layout_below="@+id/dialog"
        android:layout_margin="10dp"
        android:text="@string/settings"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/keyboard"
        android:layout_below="@+id/settings"
        android:layout_margin="10dp"
        android:text="@string/keyboard"
        android:background="@color/blue"
        android:textColor="@color/white"/>

</RelativeLayout>
